Media with text section - Customisation option given to add mobile image (#34)
* Media with text section - Customisation option given to add mobile image

* Minor changes

* .

* Review count added to product card

--- a/assets/product-card.css
+++ b/assets/product-card.css
@@ -16,3 +16,9 @@
 .product-list .product-card__figure a img{
     width: 100%;
 }
+
+.product-card__info .vendor_rating_wrapper{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
