--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -46,6 +46,7 @@
     {%- endif -%}
 
     {%- render 'product-info', product: product, update_url: true -%}
+     {% render 'rebuy-frequently_bought_together' %}
   </div>
 </div>
 
